--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ deps =
     pytest-cov
 
 commands =
-    pytest -vs --cov=jishaku --cov-report term-missing:skip-covered
+    pytest -vs --cov=onami --cov-report term-missing:skip-covered
     flake8 .
-    pylint -j "$(nproc)" jishaku
+    pylint -j "$(nproc)" onami
     isort . --check-only
