--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,12 +14,12 @@ stages:
 
 .run_tests: &run_tests
   script:
-    - PYTHONPATH="$(pwd)" pytest -vs --cov=jishaku --cov-report term-missing:skip-covered
+    - PYTHONPATH="$(pwd)" pytest -vs --cov=onami --cov-report term-missing:skip-covered
     - flake8 .
-    - pylint -j "$(nproc)" jishaku
+    - pylint -j "$(nproc)" onami
     - isort . --check-only
     - python ./setup.py sdist bdist_egg bdist_wheel
-    - rm -rf jishaku
+    - rm -rf onami
     - find dist -name *.whl -exec pip install '{}' +
     - PYTHONPATH="$(pwd)" pytest -vs
     - cd docs && make html
