--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ version: 2
 jobs:
   buster 3.8 pypi:
     docker:
-      - image: gorialis/discord.py:3.8-buster-pypi
+      - image: gorialis/nextcord:3.8-buster-pypi
 
     working_directory: ~/repo
 
@@ -47,7 +47,7 @@ jobs:
 
   buster 3.9 pypi:
     docker:
-      - image: gorialis/discord.py:3.9-buster-pypi
+      - image: gorialis/nextcord:3.9-buster-pypi
 
     working_directory: ~/repo
 
@@ -88,7 +88,7 @@ jobs:
 
   buster 3.8 git:
     docker:
-      - image: gorialis/discord.py:3.8-buster-master
+      - image: gorialis/nextcord:3.8-buster-master
 
     working_directory: ~/repo
 
@@ -129,7 +129,7 @@ jobs:
 
   buster 3.9 git:
     docker:
-      - image: gorialis/discord.py:3.9-buster-master
+      - image: gorialis/nextcord:3.9-buster-master
 
     working_directory: ~/repo
 
