--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ stages:
 
 .git_dependencies: &git_dependencies
   before_script:
-    - pip install -U "discord.py[voice] @ git+https://github.com/Rapptz/discord.py@master"
+    - pip install -U "nextcord[voice] @ git+https://github.com/Rapptz/nextcord@master"
     - pip install -U $(find requirements -name *.txt -print | sed -e 's/^/-r /' | tr '\n' ' ')
 
 .run_tests: &run_tests
@@ -26,7 +26,7 @@ stages:
 
 buster 3.9 git:
   stage: build
-  image: gorialis/discord.py:3.9-buster-master
+  image: gorialis/nextcord:3.9-buster-master
   <<: *git_dependencies
   <<: *run_tests
   artifacts:
@@ -39,7 +39,7 @@ buster 3.9 git:
 
 buster 3.9 pypi:
   stage: build
-  image: gorialis/discord.py:3.9-buster-pypi
+  image: gorialis/nextcord:3.9-buster-pypi
   <<: *pypi_dependencies
   <<: *run_tests
   artifacts:
@@ -52,7 +52,7 @@ buster 3.9 pypi:
 
 buster 3.8 git:
   stage: build
-  image: gorialis/discord.py:3.8-buster-master
+  image: gorialis/nextcord:3.8-buster-master
   <<: *git_dependencies
   <<: *run_tests
   artifacts:
@@ -65,7 +65,7 @@ buster 3.8 git:
 
 buster 3.8 pypi:
   stage: build
-  image: gorialis/discord.py:3.8-buster-pypi
+  image: gorialis/nextcord:3.8-buster-pypi
   <<: *pypi_dependencies
   <<: *run_tests
   artifacts:
@@ -78,7 +78,7 @@ buster 3.8 pypi:
 
 alpine 3.9 git:
   stage: build
-  image: gorialis/discord.py:3.9-alpine-master
+  image: gorialis/nextcord:3.9-alpine-master
   <<: *git_dependencies
   <<: *run_tests
   artifacts:
@@ -91,7 +91,7 @@ alpine 3.9 git:
 
 alpine 3.9 pypi:
   stage: build
-  image: gorialis/discord.py:3.9-alpine-pypi
+  image: gorialis/nextcord:3.9-alpine-pypi
   <<: *pypi_dependencies
   <<: *run_tests
   artifacts:
@@ -104,7 +104,7 @@ alpine 3.9 pypi:
 
 alpine 3.8 git:
   stage: build
-  image: gorialis/discord.py:3.8-alpine-master
+  image: gorialis/nextcord:3.8-alpine-master
   <<: *git_dependencies
   <<: *run_tests
   artifacts:
@@ -117,7 +117,7 @@ alpine 3.8 git:
 
 alpine 3.8 pypi:
   stage: build
-  image: gorialis/discord.py:3.8-alpine-pypi
+  image: gorialis/nextcord:3.8-alpine-pypi
   <<: *pypi_dependencies
   <<: *run_tests
   artifacts:
