--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = py37,py38,py39
 deps =
     coverage
     flake8
-    git+https://github.com/Rapptz/discord.py@master
+    git+https://github.com/Rapptz/nextcord@master
     pylint
     isort
     pytest
