--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ stages:
 
 .git_dependencies: &git_dependencies
   before_script:
-    - pip install -U "nextcord[voice] @ git+https://github.com/Rapptz/nextcord@master"
+    - pip install -U "nextcord[voice] @ git+https://github.com/nextcord/nextcord@master"
     - pip install -U $(find requirements -name *.txt -print | sed -e 's/^/-r /' | tr '\n' ' ')
 
 .run_tests: &run_tests
